--- a/index/index.html
+++ b/index/index.html
@@ -15,17 +15,26 @@
   </tr>
   <tr>
     <td class="tg-031e" colspan="2">External link to .apk:
-      <a href = "https://drive.google.com/file/d/1ke8z6gjUpTRMISrB0xGqTYImwNN8_TKY/view" target="_blank">Link to the apk file</a>  
+      <br>
+      <br>
+      <a href = "https://drive.google.com/file/d/1ke8z6gjUpTRMISrB0xGqTYImwNN8_TKY/view" target="_blank">Link to the apk file (Google Drive)</a>  
     </td>
 
   </tr>
   <tr>
     <td class="tg-031e" colspan="2">External link to source zip:
-      <a href = "https://drive.google.com/file/d/1LUHkA_TXJ3tLzsdKWTEZPwkJxQi1hctn/view" target="_blank">Link to the source zip file</a>
+      <br>
+      <br>
+      <a href = "https://drive.google.com/file/d/1LUHkA_TXJ3tLzsdKWTEZPwkJxQi1hctn/view" target="_blank">Link to the source zip file (Google Drive)</a>
+      <br>
+      <br>
+      <a href = "https://github.com/paarasbhandari/CMSC436-Fall2020-Group-Project" target="_blank">Link to the source zip file (Github)</a>
+
     </td>
   </tr>
   <tr>
     <td class="tg-031e" colspan="2">App Description: 
+    <br>
     <br>
     A voting application that leverages the blockchain technology for security. The app allows users to cast their votes and prevents duplicate votes with the help of hashing. Every vote is equivalent to a block in a blockchain and has it's own unique hash. If a vote is tampered with, its hash is altered and the blockchain breaks.
     <br>
@@ -34,16 +43,20 @@
   <tr>
     <td class="tg-031e">Screenshot1: 
       <br>
+      <br>
       <img src="App Screenshots\Login.png" alt="Login Page"  width="404" height="860">
     </td>
     <td class="tg-031e">Screenshot2:
+      <br>
       <br>
       <img src="App Screenshots\Categories.png" alt="Category Page"  width="404" height="860">
     </td>
   </tr>
   <tr>
     <td class="tg-031e" colspan="2">External link to YouTube video:
-      <a href = "https://youtu.be/dbnLOLffaMk" target="_blank">VoteChain App Demo</a>
+      <br>
+      <br>
+      <a href = "https://youtu.be/dbnLOLffaMk" target="_blank">VoteChain App Demo (Youtube)</a>
     </td>
   </tr>
   <tr>
